# notebook-examples

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY-TEST.md  blog.html  notebooks.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  security-test.html  wrangler.toml
.github/workflows/: deploy-pages.yaml
functions/oauth2/: token.js
notebooks/: _start.py  ai.py  ai_audit.py  analytics_ai_audit.py  analytics_r2_usage.py  analytics_zone_logs.py  compute_ai.py  compute_prompt.py  compute_workers.py  d1.py  empty.py  hello.py  kv.py  login.py  marimo_showcase.py  prompt.py  r2.py  r2_usage.py  storage_d1.py  storage_kv.py  storage_r2.py  workers.py  zone_logs.py
notebooks/public/: login.html
pages/: _redirects  _routes.json  index.py
pages/template/: index.html.j2
pages/template/assets/: index.css
scripts/template/: index.html.j2
