[project]
name = "notebook-examples"
version = "0.1.0"
description = "base uv project for notebook examples"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "altair==5.5.0",
    "cerberus==1.3.7",
    "flake8==7.3.0",
    "jinja2==3.1.6",
    "marimo==0.14.11",
    "moutils==0.3.11",
    "pandas==2.3.1",
    "polars==1.31.0",
    "pyyaml==6.0.2",
    "requests==2.32.4",
]

[dependency-groups]
dev = [
    "altair==5.5.0",
    "cerberus==1.3.7",
    "flake8==7.3.0",
    "jinja2==3.1.6",
    "marimo==0.14.11",
    "moutils==0.3.11",
    "pandas==2.3.1",
    "polars==1.31.0",
    "pyyaml==6.0.2",
    "requests==2.32.4",
]
